<div> remplaced by <ul>

--- a/index.html
+++ b/index.html
@@ -29,18 +29,36 @@
         </p>
 
         <div class="stats">
-          <div>
-            <p class="stat">10k+ </p>
-            <p class="type">companies</p>
+
+          <ul>
+            <li class="stat">10k+</li>
+            <li class="type">companies</li>
+          </ul>
+          <ul>
+            <li class="stat">314</li>
+            <li class="type">templates</li>
+          </ul>
+          <ul>
+            <li class="stat">12m+</li>
+            <li class="type">queries</li>
+          </ul>
+
+          <!-- 
+
+            <div>
+            <p class="stat"> </p>
+            <p class="type"></p>
           </div>
           <div>
-            <p class="stat">314</p>
-            <p class="type">templates</p>
+            <p class="stat"></p>
+            <p class="type"></p>
           </div>
           <div>
-            <p class="stat">12m+</p>
-            <p class="type">queries</p>
+            <p class="stat"></p>
+            <p class="type"></p>
           </div>
+          -->
+          
         </div>
       </div>
 
