Some commets deleted from

--- a/index.html
+++ b/index.html
@@ -16,20 +16,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet"> 
 </head>
+
 <body>
-
-
   <main>
     <div class="card">
-
       <div class="informations">
         <h1>Get <span>insights</span> that help your business grow.</h1>
         <p class="description">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
             experience, and overall efficiency.
         </p>
-
         <div class="stats">
-
           <ul>
             <li class="stat">10k+</li>
             <li class="type">companies</li>
@@ -41,41 +37,21 @@
           <ul>
             <li class="stat">12m+</li>
             <li class="type">queries</li>
-          </ul>
-
-          <!-- 
-
-            <div>
-            <p class="stat"> </p>
-            <p class="type"></p>
-          </div>
-          <div>
-            <p class="stat"></p>
-            <p class="type"></p>
-          </div>
-          <div>
-            <p class="stat"></p>
-            <p class="type"></p>
-          </div>
-          -->
-          
+          </ul>    
         </div>
       </div>
-
-      
       <picture class="image">
         <source srcset="images/image-header-mobile.jpg" media="(min-width: 900px)">
         <img src="images/image-header-desktop.jpg" alt="image header">
         <div class="bg-image"></div>
       </picture>
-
     </div>
   </main>
 
 <!--
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Younes Adjoudj</a>.
   </div>
 -->  
 </body>
